Fixed flex wrap.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -47,6 +47,7 @@
 
 .matrix-view {
     display: inline-flex;
+    flex-wrap: wrap;
 }
 
 .view-small, .view-row {
